# NumeraiScripts

./: Load_new_data_into_Colab.ipynb  find_similar.ipynb
numerai/: pyproject.toml
numerai/numerai/: see performance.ipynb
numerai/tests/: test_numerai.py
