[tool.poetry]
name = "numerai"
version = "0.1.0"
description = ""
authors = ["Parker Burchett <parkerburchett@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
numerapi = "^2.11.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
